# PYTHON_INTERNSHIP_ASSIGNMENTS

./: README.md
ASSIGNMENT WEEK 01/: TASK-01.py  TASK-02.py  TASK-03.py  TASK-04.py  TASK-05.py  TASK-06.py  TASK-07.py  TASK-08.py  TASK-09.py  TASK-10.py
ASSIGNMENT WEEK 02/: TASK_01.py  TASK_02.py  TASK_03.py  TASK_04.py  TASK_05.py  TASK_06.py  TASK_07.py  TASK_08.py  TASK_09.py  TASK_10.py
ASSIGNMENT WEEK 03/: TASK-01.py  TASK-02.py  TASK-03.py  TASK-04.py  TASK-05.py  TASK-06.py  TASK-07.py  TASK-08.py  biodata.txt  dictionary.json  file.txt  replacement_needed.txt  tempCodeRunnerFile.py  text_file.txt
ASSIGNMENT WEEK 04/: TASK-01.PY  TASK-02.PY  TASK-03.PY  TASK-04.PY  TASK-05.PY  TASK-06.PY  TASK-07.PY  TASK-08.PY  tempCodeRunnerFile.PY
ASSIGNMENT WEEK 05/ASSIGNMENT-05-CCPY-0019/: pyproject.toml
ASSIGNMENT WEEK 05/ASSIGNMENT-05-CCPY-0019/src/assignment_05/: __init__.py
ASSIGNMENT WEEK 05/ASSIGNMENT-05-CCPY-0019/src/assignment_05/PART_A/: TASK_2.py  TASK_3.py  TASK_4.py  TASK_5.py  TASK_6.py  TASK_7.py  TASK_9.py
ASSIGNMENT WEEK 05/ASSIGNMENT-05-CCPY-0019/src/assignment_05/PART_B/: TASK_01.py  TASK_02.py  TASK_03.py  TASK_05.py  TASK_06.py
ASSIGNMENT WEEK 05/ASSIGNMENT-05-CCPY-0019/src/assignment_05/data/: download.py
ASSIGNMENT WEEK 05/ASSIGNMENT-05-CCPY-0019/src/assignment_05/dataB/: extractB.py
ASSIGNMENT WEEK 05/src/assignment_05/PART_A/: TASK_1.py  TASK_10.py  TASK_11.py  TASK_8.py
ASSIGNMENT WEEK 05/src/assignment_05/PART_B/: TASK_04.py
ASSIGNMENT WEEK 05/src/assignment_05/data/: extract.py
ASSIGNMENT WEEK 05/src/assignment_05/dataB/: downloadB.py
ASSIGNMENT WEEK 10/: README.md
ASSIGNMENT WEEK 10/NUMPY_AND_MATPLOTLIB/: pyproject.toml
ASSIGNMENT WEEK 10/NUMPY_AND_MATPLOTLIB/src/numpy_and_matplotlib/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py
INVENTORY MANAGEMENT SYSTEM(MUHAMMAD MUDASSIR ABRAR BAIG)/: READ ME  data_generator.py  inventory.py  inventory_data.txt  inventory_export.csv  main.py  product.py  report_generator.py  theme_manager.py  undo_redo.py
