[project]
name = "numpy-and-matplotlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MUDASSIR ABRAR", email = "161126723+MudassarAbrar@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]

[project.scripts]
task_01 = "numpy_and_matplotlib.task_01:main"
task_02 = "numpy_and_matplotlib.task_02:main"
task_03 = "numpy_and_matplotlib.task_03:main"
task_04 = "numpy_and_matplotlib.task_04:main"
task_05 = "numpy_and_matplotlib.task_05:main"
task_06 = "numpy_and_matplotlib.task_06:main"
task_07 = "numpy_and_matplotlib.task_07:main"
task_08 = "numpy_and_matplotlib.task_08:main"
task_09 = "numpy_and_matplotlib.task_09:main"
task_10 = "numpy_and_matplotlib.task_10:main"
task_11 = "numpy_and_matplotlib.task_11:main"
task_12 = "numpy_and_matplotlib.task_12:main"
task_13 = "numpy_and_matplotlib.task_13:main"
task_14 = "numpy_and_matplotlib.task_14:main"
task_15 = "numpy_and_matplotlib.task_15:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/numpy_and_matplotlib"]
